# python-fastapi-boilerplate

./: .env-sample  .env.example  .gitignore  Dockerfile  LICENSE  README.md  asgi.py  google_wallet.py  main.py  product_structure.txt  pyproject.toml  requirements.txt
.github/workflow/: ci.yml  code_quality.yml  security.yml  setup_environment.yml
app/: __init__.py
app/api/: __init__.py
app/core/: config.py  setup.py
app/services/: llm_service.py
app/utils/: llm_utils.py  standard_response.py
apps/: __init__.py  server.py
apps/api/: view.py
apps/constant/: constant.py
apps/middleware/: authentication_middleware.py  cors_middleware.py  custom_middleware.py  error_handling_middleware.py  logging_middleware.py  rate_limiting_middleware.py  request_size_middleware.py  response_time_middleware.py  session_middleware.py
apps/ml_backend/: Readme.md  inference.py
celery_tasks/: worker.py
config/: __init__.py  aws_config.py  cors.py  database.py  db_config.py  env_config.py  jwt_config.py  kaleyra_config.py  logging_config.py  mail_config.py  project_path.py  redis_config.py  session_config.py  shoper-app-198b2b6cbc3e.json  signing_cookies.py  social_login.py  twilio_config.py
core/: __init__.py  exceptions.py  session.py
core/db/: __init__.py  (+2 more)
github/: PULL_REQUEST_TEMPLATE.md
log_service/: __init__.py  system_logger.py
middleware/: __init__.py  authentication_middleware.py  rate_limiting_middleware.py  request_size_middleware.py  response_log_middleware.py  s3_middleware.py  session_middleware.py
scheduler_service.py/: constant.py  env_config.py  main.py  scheduler.py  scheduler_job.py
(+49 files in other folders)
